// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialIconDirective should be filled when type is null 1`] = `
<rc-material-icon
  class="material-icons"
>
  home
</rc-material-icon>
`;

exports[`MaterialIconDirective should be filled when type is undefined 1`] = `
<rc-material-icon
  class="material-icons"
>
  home
</rc-material-icon>
`;

exports[`MaterialIconDirective should be of type filled 1`] = `
<rc-material-icon
  class="material-icons"
>
  home
</rc-material-icon>
`;

exports[`MaterialIconDirective should be of type outlined 1`] = `
<rc-material-icon
  class="material-icons-outlined"
>
  home
</rc-material-icon>
`;

exports[`MaterialIconDirective should be of type sharp 1`] = `
<rc-material-icon
  class="material-icons-sharp"
>
  home
</rc-material-icon>
`;

exports[`MaterialIconDirective should be of type two-tone 1`] = `
<rc-material-icon
  class="material-icons-two-tone"
>
  home
</rc-material-icon>
`;

exports[`MaterialIconDirective should create icon home 1`] = `
<rc-material-icon
  class="material-icons"
>
  home
</rc-material-icon>
`;

exports[`MaterialIconDirective should create icon pin_push 1`] = `
<rc-material-icon
  class="material-icons"
>
  pin_push
</rc-material-icon>
`;
